[package]
name = "hello_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
# ic-stable-memory = "0.4"
# serde = {version =  "1.0", features = ["derive"]}
# ic-cdk-macros = "0.6.8"
# serde_bytes = "0.11.9"
# candid_derive = "0.6.0"
# ic-stable-memory-derive = "0.4.2"


# [features]
# custom_dyn_encoding = []