[package]
name = "hello_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# serde_bytes = "0.11.9"
candid = "0.10"
candid_derive = "0.6.0"
ic-cdk = "0.13"
ic-cdk-macros = "0.6.8"
# ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-stable-memory = "0.4"
ic-stable-memory-derive = "0.4.2"
ic-stable-structures = "0.6.4"
serde = {version =  "1.0", features = ["derive"]}
serde_json = "1.0.74"
thiserror = "1.0"


# [features]
# custom_dyn_encoding = []